--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html data-bs-theme="dark">
 <head>
   <meta charset="utf-8" />
-  <title>YouTube Metrics Monitor</title>
+  <title>Social Media Metrics Monitor</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -10,14 +10,26 @@
   <div class="container mt-4">
     <div class="row">
       <div class="col-md-12">
-        <h1>YouTube Metrics Monitor <i class="fa-brands fa-youtube" style="float: right; padding-top: 0.8rem;"></i></h1>
-        <div id="metrics-data">
-          <h5><i class="fa-solid fa-play-circle" style="margin-right: 0.5rem"></i> Playlist Title: <span id="playlist-title"></span></h5>
+        <h1>Social Media Metrics Monitor</h1>
+        <h2>YouTube Metrics <i class="fa-brands fa-youtube" style="float: right; padding-top: 0.8rem;"></i></h2>
+        <div id="youtube-metrics">
           <h5><i class="fa-solid fa-eye" style="margin-right: 0.5rem"></i> Total Views: <span id="total-views"></span></h5>
           <h5><i class="fa-solid fa-user" style="margin-right: 0.5rem"></i> Channel Title: <span id="channel-title"></span></h5>
           <h5><i class="fa-solid fa-users" style="margin-right: 0.5rem"></i> Subscribers: <span id="subscribers"></span></h5>
           <h5><i class="fa-solid fa-eye" style="margin-right: 0.5rem"></i> Channel Views: <span id="channel-views"></span></h5>
           <h5><i class="fa-solid fa-video" style="margin-right: 0.5rem"></i> Video Count: <span id="video-count"></span></h5>
+        </div>
+        <h2>GitHub Metrics <i class="fa-brands fa-github" style="float: right; padding-top: 0.8rem;"></i></h2>
+        <div id="github-metrics">
+          <h5><i class="fa-solid fa-code-branch" style="margin-right: 0.5rem"></i> Forks: <span id="github-forks"></span></h5>
+          <h5><i class="fa-solid fa-star" style="margin-right: 0.5rem"></i> Stars: <span id="github-stars"></span></h5>
+          <!-- Additional GitHub Metrics -->
+        </div>
+        <h2>Twitter Metrics <i class="fa-brands fa-twitter" style="float: right; padding-top: 0.8rem;"></i></h2>
+        <div id="twitter-metrics">
+          <h5><i class="fa-solid fa-users" style="margin-right: 0.5rem"></i> Followers: <span id="twitter-followers"></span></h5>
+          <h5><i class="fa-solid fa-calendar-days" style="margin-right: 0.5rem"></i> Tweets Last 7 Days: <span id="tweets-last-7-days"></span></h5>
+          <!-- Additional Twitter Metrics -->
         </div>
       </div>
     </div>
@@ -28,8 +40,9 @@
   </div>
   <script>
     document.addEventListener('DOMContentLoaded', function() {
-      fetch('/metrics')
-        .then(response => {
+      // Fetch YouTube metrics as before
+      fetch('/metrics/youtube')
+      .then(response => {
           if (!response.ok) {
             throw new Error('Network response was not ok');
           }
@@ -69,7 +82,41 @@
           updateElementText('video-count', metrics['Video Count']);
         })
         .catch(error => console.error('Error fetching metrics:', error));
+
+      // Fetch GitHub metrics
+      fetch('/metrics/github/90DaysOfDevOps')
+        .then(handleResponse)
+        .then(data => updateMetrics('github', data))
+        .catch(error => console.error('Error fetching GitHub metrics:', error));
+
+      // Fetch Twitter metrics
+      fetch('/metrics/twitter')
+        .then(handleResponse)
+        .then(data => updateMetrics('twitter', data))
+        .catch(error => console.error('Error fetching Twitter metrics:', error));
+
+      function handleResponse(response) {
+        if (!response.ok) {
+          throw new Error('Network response was not ok');
+        }
+        return response.json();
+      }
+
+      function updateMetrics(platform, metrics) {
+        for (const [key, value] of Object.entries(metrics)) {
+          updateElementText(`${platform}-${key.toLowerCase().replace(/\s+/g, '-')}`, value);
+        }
+      }
+
+      function updateElementText(id, text) {
+        const element = document.getElementById(id);
+        if (element) {
+          element.textContent = text;
+        } else {
+          console.warn(`Element with ID '${id}' not found.`);
+        }
+      }
     });
-    </script>
+  </script>
 </body>
 </html>
