Updated icons and added some more potential APIs

--- a/index.html
+++ b/index.html
@@ -14,22 +14,29 @@
         <h2>YouTube Metrics <i class="fa-brands fa-youtube" style="float: right; padding-top: 0.8rem;"></i></h2>
         <div id="youtube-metrics">
           <h5><i class="fa-solid fa-eye" style="margin-right: 0.5rem"></i> Total Views: <span id="total-views"></span></h5>
-          <h5><i class="fa-solid fa-user" style="margin-right: 0.5rem"></i> Channel Title: <span id="channel-title"></span></h5>
-          <h5><i class="fa-solid fa-users" style="margin-right: 0.5rem"></i> Subscribers: <span id="subscribers"></span></h5>
+          <h5><i class="fa-brands fa-square-youtube" style="margin-right: 0.5rem"></i> Channel Title: <span id="channel-title"></span></h5>
+          <h5><i class="fa-solid fa-people-roof" style="margin-right: 0.5rem"></i> Subscribers: <span id="subscribers"></span></h5>
           <h5><i class="fa-solid fa-eye" style="margin-right: 0.5rem"></i> Channel Views: <span id="channel-views"></span></h5>
           <h5><i class="fa-solid fa-video" style="margin-right: 0.5rem"></i> Video Count: <span id="video-count"></span></h5>
         </div>
         <h2>GitHub Metrics <i class="fa-brands fa-github" style="float: right; padding-top: 0.8rem;"></i></h2>
         <div id="github-metrics">
-          <h5><i class="fa-solid fa-code-branch" style="margin-right: 0.5rem"></i> Forks: <span id="github-forks"></span></h5>
+          <h5><i class="fa-solid fa-code-fork" style="margin-right: 0.5rem"></i> Forks: <span id="github-forks"></span></h5>
+          <h5><i class="fa-solid fa-code-branch" style="margin-right: 0.5rem"></i> PRs: <span id="github-prs"></span></h5>
+          <h5><i class="fa-solid fa-comment" style="margin-right: 0.5rem"></i> Issues: <span id="github-issues"></span></h5>
+          <h5><i class="fa-solid fa-eye" style="margin-right: 0.5rem"></i> Watchers: <span id="github-watchers"></span></h5>
           <h5><i class="fa-solid fa-star" style="margin-right: 0.5rem"></i> Stars: <span id="github-stars"></span></h5>
+          
           <!-- Additional GitHub Metrics -->
         </div>
-        <h2>Twitter Metrics <i class="fa-brands fa-twitter" style="float: right; padding-top: 0.8rem;"></i></h2>
+        <h2>Twitter Metrics (always be Twitter)<i class="fa-brands fa-twitter" style="float: right; padding-top: 0.8rem;"></i></h2>
         <div id="twitter-metrics">
-          <h5><i class="fa-solid fa-users" style="margin-right: 0.5rem"></i> Followers: <span id="twitter-followers"></span></h5>
-          <h5><i class="fa-solid fa-calendar-days" style="margin-right: 0.5rem"></i> Tweets Last 7 Days: <span id="tweets-last-7-days"></span></h5>
-          <!-- Additional Twitter Metrics -->
+        <h5><i class="fa-solid fa-user" style="margin-right: 0.5rem"></i> Following: <span id="twitter-following"></span></h5>  
+        <h5><i class="fa-regular fa-user" style="margin-right: 0.5rem"></i> Followers: <span id="twitter-followers"></span></h5>
+        <h5><i class="fa-solid fa-pen" style="margin-right: 0.5rem"></i> Tweets Last 7 Days: <span id="tweets-last-7-days"></span></h5>
+        <h5><i class="fa-solid fa-up-right-and-down-left-from-center" 
+        style="margin-right: 0.5rem"></i> Followers Last 7 Days: <span id="Followers Last 7 Days"></span></h5>
+        <!-- Additional Twitter Metrics -->
         </div>
       </div>
     </div>
